--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,15 @@
 spring.application.name=ChatApp
 
-#H2コンソールを有効にしてDBの中身をブラウザで見られるようにする設定
+#H2コンソールを有効にする
 spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:chatdb
+#H2コンソールへのアクセスパス（/h2-consoleでアクセス可能）
+Spring.h2.console.path=/h2-console
+
+#データベースの接続設定（メモリ上に保存）
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring,datasource.password=
+
+#Hibernateが実行するSQLをログに出力する（確認用
+spring.jpa.show-sql=true
